fix: included defined height value to prevent image bleed on mobile formats.

--- a/client/src/pages/recipe-detail-page/RecipeDetailPage.css
+++ b/client/src/pages/recipe-detail-page/RecipeDetailPage.css
@@ -34,7 +34,7 @@
 
 .recipe-detail__img {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 5 / 4;
   display: block;
   object-fit: cover;
   object-position: center;
@@ -154,6 +154,11 @@
     height: 70dvh;
     padding: var(--large-gap);
     gap: var(--large-gap);
+  }
+
+  .recipe-detail__img {
+    aspect-ratio: auto;
+    height: 100%;
   }
 
   .recipe-detail__instructions {
